fix: promQL icon not visible in light mode

--- a/frontend/src/container/NewWidget/LeftContainer/QuerySection/QuerySection.styles.scss
+++ b/frontend/src/container/NewWidget/LeftContainer/QuerySection/QuerySection.styles.scss
@@ -54,6 +54,10 @@
 		.ant-tabs-tab-active {
 			.nav-btns {
 				background: var(--bg-vanilla-300) !important;
+
+				.prom-ql-icon {
+					color: var(--bg-ink-400);
+				}
 			}
 		}
 	}
